language/move-lang/tests/move_check/dependencies/use_friend_transitive_by_friend.exp
error: 

    ┌── tests/move_check/dependencies/use_friend_transitive_by_friend.move:14:5 ───
    │
 14 │     friend 0x2::C;
    │     ^^^^^^^^^^^^^^ Invalid friend '0x2::C' in module '0x2::B'
    ·
 14 │     friend 0x2::C;
    │     -------------- This friend relationship creates a dependency cycle: '0x2::B' is a friend of '0x2::A' uses '0x2::C' is a friend of '0x2::B'
    │

